# sails-decl-rs

./: cargo.toml
.github/workflows/: release.yml
npm/: install.js  package.json
sails-decl-cli/: Cargo.toml
sails-decl-cli/src/: main.rs
sails-decl-core/: Cargo.toml
sails-decl-core/src/: helpers.rs  lib.rs  literal_declarations.rs  model.rs  util.rs
